# capstone

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.fa  README.md  docker-compose.yml  main.py  pyproject.toml
ai_finance_assistant/: README.md  config.yaml  requirements.txt
ai_finance_assistant/deepeval_tests/: test_deepeval_finance.py
ai_finance_assistant/src/: pipeline.py
ai_finance_assistant/src/agents/: registry.py
ai_finance_assistant/src/core/: architecture.py  disclaimers.py
ai_finance_assistant/src/data/: knowledge_base.py
ai_finance_assistant/src/market/: alpha_vantage.py
ai_finance_assistant/src/orchestration/: graph.py  state.py
ai_finance_assistant/src/rag/: ingest.py  pipeline.py
ai_finance_assistant/src/utils/: config_loader.py
ai_finance_assistant/src/web_app/: streamlit_app.py
ai_finance_assistant/tests/: test_registry.py
call_summarizer_agents/: pipeline.py
call_summarizer_agents/agents/: intake_agent.py  quality_score_agent.py  routing_agent.py  summarization_agent.py  transcription_agent.py
call_summarizer_agents/config/: mcp.yaml  settings.py
call_summarizer_agents/deepeval_tests/: test_deepeval_call_summarizer.py
call_summarizer_agents/orchestration/: graph.py  state.py
call_summarizer_agents/tests/: test_pipeline.py  test_validation.py
call_summarizer_agents/ui/: streamlit_app.py
call_summarizer_agents/utils/: debug.py  validation.py
capstone_common/llm/: openai_client.py
capstone_common/testing/: deepeval.py
tests/: test_agents.py  test_pipeline.py
(+2 files in other folders)
