[project]
name = "capstone"
version = "0.1.0"
description = "Multi-agent call summarization and QA monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "streamlit>=1.33",
    "langchain>=0.2",
    "langgraph>=0.0.66",
    "langsmith>=0.1.42",
    "openai>=1.30",
    "pydantic-settings>=2.7",
    "pytest>=8.2",
    "pyyaml>=6.0",
    "chromadb>=1.3.7",
    "deepeval>=3.7.6",
]

[tool.setuptools]
packages = [
  "call_summarizer_agents",
  "ai_finance_assistant",
  "capstone_common",
  "capstone_common.llm",
  "capstone_common.testing",
]